tests/error/type_match/typename_tuple_mismatched_element_count1.bz
// error: couldn't match the function call to the function
// note: function argument types are '<error-type>'
// note: candidate: 'function test1(T: [typename, typename, typename]) -> void'
function test1(T: [typename, typename, typename]);

function test()
{
	test1([int32, float64, str, char]);
}
